--- a/.github/workflows/gladosCheck.yml
+++ b/.github/workflows/gladosCheck.yml
@@ -8,7 +8,7 @@ on:
       - 'README.md'
       - 'imgs/'
   schedule:
-    - cron: '0  0,12 * * *'
+    - cron: '35 0/8, * * *'
   watch:
     types: started
 
